# TermFX

./: .gitignore  ARCHITECTURE_TR.md  Cargo.toml  README.md  README.tr.md
packaging/macos/: Info.plist
scripts/: build-macos-app.sh
src/: error.rs  lib.rs  main.rs  project.rs
src/core/: effect.rs  media.rs  mod.rs  smart.rs  time.rs  timeline.rs
src/desktop/: mod.rs
src/mcp/: protocol.rs  server.rs  tools.rs
src/render/: ffmpeg.rs  filtergraph.rs  mod.rs  progress.rs
src/tui/: app.rs  layout.rs  mod.rs  timeline_widget.rs
