[package]
name = "termfx"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Terminal-native video editor with FFmpeg rendering, TUI controls, and an MCP server."

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.23"
