[package]
name = "termfx"
version = "0.1.1"
edition = "2024"
default-run = "termfx"
license = "MIT"
description = "Native video editor with FFmpeg rendering, visual editing controls, and an MCP server."

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.28"
eframe = "0.35"
ratatui = "0.29"
rfd = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.23"
